setup typescript environments

--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -1,6 +1,10 @@
 {
   "name": "nkzn-todo-application",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "dist/index.js",
+  "license": "MIT",
+  "dependencies": {
+    "nkzn-todo-domain": "1.0.0",
+    "nkzn-todo-infrastructure": "1.0.0"
+  }
 }
