use lerna & setuping typescript

--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "name": "nkzn-todo",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ]
+  "license": "MIT",
+  "scripts": {
+    "postinstall": "lerna bootstrap"
+  },
+  "devDependencies": {
+    "lerna": "^2.11.0"
+  }
 }
