add typings path

--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -2,6 +2,7 @@
   "name": "nkzn-todo-domain",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "build:tsc": "tsc -p ."
