--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -2,6 +2,7 @@
   "name": "nkzn-todo-application",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "typings": "lib/index.d.ts",
   "license": "MIT",
   "scripts": {
     "build:tsc": "tsc -p ."
