--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -2,10 +2,18 @@
   "name": "nkzn-todo-application",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "typings": "lib/index.d.ts",
+  "typings": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build:tsc": "tsc -p ."
+    "build:tsc": "tsc -p .",
+    "start:tsc": "tsc -p . -w"
+  },
+  "dependencies": {
+    "nkzn-todo-domain": "1.0.0",
+    "nkzn-todo-infrastructure": "1.0.0",
+    "redux": "^4.0.0",
+    "typescript-fsa": "^3.0.0-beta-1",
+    "typescript-fsa-reducers": "^0.4.5"
   },
   "devDependencies": {
     "typescript": "^2.8.3"
