--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -8,9 +8,7 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.15.1",
-    "redux": "^4.0.0",
-    "typescript-fsa": "^3.0.0-beta-1",
-    "typescript-fsa-reducers": "^0.4.5"
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
