customize cra-ts into my favorite structure

--- a/packages/presentation/tsconfig.json
+++ b/packages/presentation/tsconfig.json
@@ -2,9 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "build/dist",
-    "allowJs": true,
     "jsx": "react",
-    "rootDir": "src",
+    "rootDir": "src"
   },
   "exclude": [
     "node_modules",
