--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "nkzn-todo-application": "1.0.0",
+    "nkzn-todo-domain": "1.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.15.1",
+    "recompose": "^0.27.0",
     "redux": "^4.0.0"
   },
   "scripts": {
@@ -21,6 +24,8 @@
     "@types/node": "^10.0.6",
     "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
+    "@types/react-redux": "^6.0.0",
+    "@types/recompose": "^0.26.1",
     "typescript": "^2.8.3"
   }
 }
