--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -6,9 +6,12 @@
   "license": "MIT",
   "scripts": {
     "build:tsc": "tsc -p .",
-    "start:tsc": "tsc -p . -w"
+    "start:tsc": "tsc -p . -w",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
   "devDependencies": {
+    "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.12.0",
     "typescript": "^2.8.3"
   }
 }
