import multi-package-redux to single-package

--- a/single-package/package.json
+++ b/single-package/package.json
@@ -2,22 +2,29 @@
   "name": "nkzn-redux-single-package",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts-ts": "2.16.0"
+    "react-scripts-ts": "2.16.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
     "@types/node": "^10.1.0",
     "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
-    "typescript": "^2.8.3"
+    "@types/react-redux": "^6.0.0",
+    "typescript": "^2.8.3",
+    "typescript-fsa": "^3.0.0-beta-1",
+    "typescript-fsa-reducers": "^0.4.5"
   }
 }
