--- a/multi-package/packages/application-redux/package.json
+++ b/multi-package/packages/application-redux/package.json
@@ -11,10 +11,7 @@
   },
   "dependencies": {
     "nkzn-todo-domain": "1.0.0",
-    "nkzn-todo-infrastructure": "1.0.0",
-    "redux": "^4.0.0",
-    "typescript-fsa": "^3.0.0-beta-1",
-    "typescript-fsa-reducers": "^0.4.5"
+    "nkzn-todo-infrastructure": "1.0.0"
   },
   "devDependencies": {
     "tslint": "^5.10.0",
