--- a/multi-package/packages/presentation-redux/package.json
+++ b/multi-package/packages/presentation-redux/package.json
@@ -11,7 +11,9 @@
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.15.1",
     "recompose": "^0.27.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "typescript-fsa": "^3.0.0-beta-1",
+    "typescript-fsa-reducers": "^0.4.5"
   },
   "scripts": {
     "start": "react-scripts-ts start",
