application is free from redux!!!!!!!

--- a/multi-package/packages/presentation-redux/package.json
+++ b/multi-package/packages/presentation-redux/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "nkzn-todo-application-redux": "1.0.0",
+    "nkzn-todo-application": "1.0.0",
     "nkzn-todo-domain": "1.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
