--- a/multi-package/packages/application/package.json
+++ b/multi-package/packages/application/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nkzn-todo-application-redux",
+  "name": "nkzn-todo-application",
   "version": "1.0.0",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
