modernize multi-package

--- a/multi-package/packages/application/package.json
+++ b/multi-package/packages/application/package.json
@@ -6,16 +6,13 @@
   "license": "MIT",
   "scripts": {
     "build:tsc": "tsc -p .",
-    "start:tsc": "tsc -p . -w",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'"
+    "start:tsc": "tsc -p . -w"
   },
   "dependencies": {
     "nkzn-todo-domain": "1.0.0",
     "nkzn-todo-infrastructure": "1.0.0"
   },
   "devDependencies": {
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.12.0",
-    "typescript": "^2.8.3"
+    "typescript": "~3.7.2"
   }
 }
