--- a/multi-package/packages/presentation-redux/tsconfig.json
+++ b/multi-package/packages/presentation-redux/tsconfig.json
@@ -5,13 +5,7 @@
     "jsx": "react",
     "rootDir": "src"
   },
-  "exclude": [
-    "node_modules",
-    "build",
-    "scripts",
-    "acceptance-tests",
-    "webpack",
-    "jest",
-    "src/setupTests.ts"
+  "include": [
+    "src"
   ]
 }
