--- a/multi-package/packages/domain/package.json
+++ b/multi-package/packages/domain/package.json
@@ -6,12 +6,9 @@
   "license": "MIT",
   "scripts": {
     "build:tsc": "tsc -p .",
-    "start:tsc": "tsc -p . -w",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'"
+    "start:tsc": "tsc -p . -w"
   },
   "devDependencies": {
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.12.0",
-    "typescript": "^2.8.3"
+    "typescript": "~3.7.2"
   }
 }
