--- a/multi-package/packages/domain/tsconfig.json
+++ b/multi-package/packages/domain/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "isolatedModules": false,
     "declaration": true,
     "outDir": "dist",
     "rootDir": "src",
